First commited as before_46469_rev1